--- a/audience.html
+++ b/audience.html
@@ -9,7 +9,7 @@
     <meta name="description" content="feed the rhizome">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.9.2/semantic.min.css" integrity="sha512-n//BDM4vMPvyca4bJjZPDh7hlqsQ7hqbP9RH18GF2hTXBY5amBwM2501M0GPiwCU/v9Tor2m13GOTFjk00tkQA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link href="semantic.min.css" rel="stylesheet"> -->
-    <link href="styles/styles.css" rel="stylesheet">
+    <link href="styles/styles.css" type="text/css" rel="stylesheet">
   </head>
   <body>
 
